fixed album names being underlined and wrong color

--- a/react-app/src/components/CSS/john.css
+++ b/react-app/src/components/CSS/john.css
@@ -581,6 +581,11 @@
   text-decoration: none;
 }
 
+.albumImageTitleContainer {
+  text-decoration: none;
+  color: black;
+}
+
 .errors-one {
   margin-left: 35px;
   font-family: Proxima Nova, helvetica neue, helvetica, arial, sans-serif;
